# calc-cli

./: .coverage  README.md  pyproject.toml
.github/workflows/: python-app.yml
app/: main.py
app/calculation/: calculation.py  factory.py  history.py
app/calculator/: __init__.py  calculator.py
app/operation/: __init__.py  ops.py
tests/: conftest.py  test_calculations.py  test_calculator.py  test_main.py  test_main_helpers.py  test_operations.py
